--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <base data-trunk-public-url />
+
         <style>
             body {
                 font-family: Arial, sans-serif;
