--- a/index.html
+++ b/index.html
@@ -9,11 +9,81 @@
                 align-items: center;
                 height: 100vh;
                 margin: 0;
-                background-color: #f0f0f0;
+                background-color: #121212; /* Dark mode background */
+                color: #ffffff; /* Light text color */
             }
-            div {
+
+            /* Main container with left panel */
+            .container {
+                display: flex;
+                flex-direction: row;
+                width: 80%;
+                max-width: 800px;
+                border-radius: 10px;
+                overflow: hidden;
+                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+                background-color: #1e1e1e; /* Dark background for main panel */
+            }
+
+            /* Left panel for upgrades */
+            .left-panel {
+                width: 200px;
+                padding: 20px;
+                background-color: #2b2b2b;
+                border-right: 1px solid #444;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            /* Upgrade button styles */
+            .upgrade-button {
+                display: flex;
+                align-items: center;
+                padding: 10px;
+                font-size: 14px;
+                cursor: pointer;
+                color: #ffffff;
+                border: 1px solid #444;
+                border-radius: 5px;
+                background-color: #333;
+                transition: background-color 0.2s ease, color 0.2s ease;
+            }
+
+            .upgrade-button:hover {
+                background-color: #555;
+                border-color: #777;
+            }
+
+            /* Style for active upgrade (purchased) */
+            .upgrade-button.active {
+                background-color: #4caf50; /* Indicate purchase with a green color */
+                color: white;
+                border-color: #4caf50;
+                cursor: default;
+            }
+
+            /* Icon style inside the upgrade button */
+            .upgrade-icon {
+                width: 20px;
+                height: 20px;
+                margin-right: 8px;
+                background-color: #4caf50;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 12px;
+                color: #ffffff;
+            }
+
+            /* Center panel for main game area */
+            .game-panel {
+                padding: 20px;
                 text-align: center;
+                flex-grow: 1;
             }
+
             button {
                 padding: 10px 20px;
                 font-size: 16px;
@@ -21,6 +91,7 @@
                 margin: 5px;
                 border: none;
                 border-radius: 5px;
+                transition: background-color 0.2s;
             }
             button:first-of-type {
                 background-color: #4caf50;
@@ -35,6 +106,13 @@
             }
             button:last-of-type:hover {
                 background-color: #da190b;
+            button:hover {
+                background-color: #45a049;
+            }
+
+            button:disabled {
+                background-color: #777;
+                cursor: not-allowed;
             }
         </style>
     </head>
