--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <base data-trunk-public-url />
-
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -20,13 +18,23 @@
                 padding: 10px 20px;
                 font-size: 16px;
                 cursor: pointer;
-                background-color: #4caf50;
-                color: white;
+                margin: 5px;
                 border: none;
                 border-radius: 5px;
             }
-            button:hover {
+            button:first-of-type {
+                background-color: #4caf50;
+                color: white;
+            }
+            button:first-of-type:hover {
                 background-color: #45a049;
+            }
+            button:last-of-type {
+                background-color: #f44336;
+                color: white;
+            }
+            button:last-of-type:hover {
+                background-color: #da190b;
             }
         </style>
     </head>
