--- a/index.html
+++ b/index.html
@@ -9,79 +9,64 @@
                 align-items: center;
                 height: 100vh;
                 margin: 0;
-                background-color: #121212; /* Dark mode background */
-                color: #ffffff; /* Light text color */
+                background-color: #121212;
+                color: #ffffff;
             }
 
-            /* Main container with left panel */
             .container {
                 display: flex;
-                flex-direction: row;
                 width: 80%;
                 max-width: 800px;
                 border-radius: 10px;
                 overflow: hidden;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-                background-color: #1e1e1e; /* Dark background for main panel */
+                background-color: #1e1e1e;
             }
 
-            /* Left panel for upgrades */
             .left-panel {
                 width: 200px;
                 padding: 20px;
                 background-color: #2b2b2b;
-                border-right: 1px solid #444;
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
-            }
-
-            /* Upgrade button styles */
-            .upgrade-button {
-                display: flex;
                 align-items: center;
-                padding: 10px;
-                font-size: 14px;
+            }
+
+            .upgrade-square {
+                width: 80px;
+                height: 80px;
+                background-color: #2e1a4f; /* Dark purple background */
+                border: 4px solid #ff8c00; /* Orange border */
+                border-radius: 8px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 cursor: pointer;
-                color: #ffffff;
-                border: 1px solid #444;
-                border-radius: 5px;
-                background-color: #333;
-                transition: background-color 0.2s ease, color 0.2s ease;
+                transition: transform 0.2s, background-color 0.2s, border-color 0.2s;
+                text-align: center;
+                color: #ffcc00; /* Gold text color */
             }
 
-            .upgrade-button:hover {
-                background-color: #555;
-                border-color: #777;
+            .upgrade-square:hover {
+                transform: scale(1.1);
+                border-color: #ffcc00; /* Brighter border on hover */
             }
 
-            /* Style for active upgrade (purchased) */
-            .upgrade-button.active {
-                background-color: #4caf50; /* Indicate purchase with a green color */
-                color: white;
-                border-color: #4caf50;
+            .upgrade-square.active {
+                background-color: #1a373f; /* Darker background when active */
+                border-color: #00c896; /* Green border for active state */
+                color: #00c896;
                 cursor: default;
             }
 
-            /* Icon style inside the upgrade button */
             .upgrade-icon {
-                width: 20px;
-                height: 20px;
-                margin-right: 8px;
-                background-color: #4caf50;
-                border-radius: 50%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 12px;
-                color: #ffffff;
+                font-size: 24px;
+                margin-bottom: 4px;
             }
 
-            /* Center panel for main game area */
-            .game-panel {
-                padding: 20px;
-                text-align: center;
-                flex-grow: 1;
+            .upgrade-text {
+                font-size: 12px;
+                color: inherit;
             }
 
             button {
@@ -110,7 +95,28 @@
                 background-color: #45a049;
             }
 
-            button:disabled {
+            .game-panel {
+                padding: 20px;
+                text-align: center;
+                flex-grow: 1;
+            }
+
+            .click-button {
+                padding: 10px 20px;
+                font-size: 16px;
+                cursor: pointer;
+                background-color: #4caf50;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                transition: background-color 0.2s;
+            }
+
+            .click-button:hover {
+                background-color: #45a049;
+            }
+
+            .click-button:disabled {
                 background-color: #777;
                 cursor: not-allowed;
             }
