feat: dev pannel

--- a/index.html
+++ b/index.html
@@ -120,6 +120,60 @@
                 background-color: #777;
                 cursor: not-allowed;
             }
+
+            .dev-panel {
+                position: fixed;
+                right: 0;
+                top: 0;
+                width: 600px;
+                height: 100vh;
+                background: #1a1a1a;
+                color: #fff;
+                padding: 20px;
+                overflow-y: auto;
+                box-shadow: -2px 0 10px rgba(0,0,0,0.5);
+            }
+
+            .chart-container {
+                background: #222;
+                padding: 10px;
+                border-radius: 5px;
+                margin: 10px 0;
+            }
+
+            .parameters {
+                margin: 20px 0;
+            }
+
+            .parameter-group {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                margin: 10px 0;
+            }
+
+            .parameter-group input[type="range"] {
+                flex: 1;
+            }
+
+            .formulas {
+                background: #222;
+                padding: 10px;
+                border-radius: 5px;
+                margin: 10px 0;
+            }
+
+            .formulas pre {
+                margin: 0;
+                color: #00ff00;
+            }
+
+            .statistics {
+                background: #222;
+                padding: 10px;
+                border-radius: 5px;
+                margin: 10px 0;
+            }
         </style>
     </head>
     <body></body>
