--- a/index.html
+++ b/index.html
@@ -126,9 +126,6 @@
             }
 
             .dev-panel {
-                position: fixed;
-                right: 0;
-                top: 0;
                 width: 600px;
                 height: 100vh;
                 background: #1a1a1a;
@@ -196,12 +193,14 @@
             }
             .navbar {
                 background: #333;
+                color: white;
                 padding: 10px;
                 display: flex;
                 gap: 10px;
             }
             .navbar button {
                 background: #444;
+                color: white;
                 border: none;
                 padding: 10px 20px;
                 cursor: pointer;
