feat: implement tabbed navigation for game view and dev panel

--- a/index.html
+++ b/index.html
@@ -213,6 +213,20 @@
                 padding: 20px;
                 overflow-y: auto;
             }
+            .tabs {
+                display: flex;
+                flex-direction: row;
+                flex-grow: 1;
+            }
+            .tab {
+                flex-grow: 1;
+                padding: 20px;
+                overflow-y: auto;
+                border-right: 1px solid #ddd;
+            }
+            .tab:last-child {
+                border-right: none;
+            }
         </style>
     </head>
 <body></body>
