feat: add upgrade configuration component and integrate into game view

--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
             .tab:last-child {
                 border-right: none;
             }
+            .sub-tab {
+                margin-top: 20px;
+                padding: 20px;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+            }
+            .upgrade-config {
+                margin-top: 20px;
+            }
+            .upgrade {
+                margin-bottom: 20px;
+            }
         </style>
     </head>
 <body></body>
