--- a/index.html
+++ b/index.html
@@ -126,10 +126,7 @@
             }
 
             .dev-panel {
-                width: 600px;
-                height: 100vh;
-                background: #1a1a1a;
-                color: #fff;
+                width: 300px;
                 padding: 20px;
                 overflow-y: auto;
                 box-shadow: -2px 0 10px rgba(0,0,0,0.5);
@@ -189,7 +186,7 @@
             .main-content {
                 flex-grow: 1;
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
             }
             .navbar {
                 background: #333;
