feat: update upgrade square dimensions and enhance developer panel styling; add upgrade list layout

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             }
 
             .upgrade-square {
-                width: 80px;
-                height: 80px;
+                width: 100px;
+                height: 100px;
                 background-color: #2e1a4f; /* Dark purple background */
                 border: 4px solid #ff8c00; /* Orange border */
                 border-radius: 8px;
@@ -127,8 +127,8 @@
 
             .dev-panel {
                 padding: 20px;
+                box-shadow: -2px 0 5px rgba(0,0,0,0.1);
                 overflow-y: auto;
-                box-shadow: -2px 0 10px rgba(0,0,0,0.5);
             }
 
             .chart-container {
@@ -236,7 +236,15 @@
             .upgrade {
                 margin-bottom: 20px;
             }
+            .upgrades {
+                margin-bottom: 20px;
+            }
+            .upgrade-list {
+                display: flex;
+                gap: 10px;
+            }
         </style>
     </head>
-<body></body>
+<body>
+</body>
 </html>
